# news-site

./: .env  .env.template  .eslintrc.yml  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  package.json
.github/workflows/: rust.yml
locales/: en.yml  sv.yml
scss/: _mixins.scss  _palette.scss  _settings.scss  article.scss  box.scss  buttons.scss  control_panel.scss  defaults.scss  editor.scss  error.scss  fonts.scss  forms.scss  info-table.scss  layout.scss  main.scss  news_item.scss  pill.scss  popup.scss  table.scss  typography.scss
sql/: 0-create_tables.sql
sql/articles/: get_all_done_unpublished-count.sql  get_all_done_unpublished.sql  get_all_tags.sql  get_by_any_of_tags.sql  get_by_author.sql  get_by_id.sql  get_by_tag.sql  get_by_type.sql  get_n_latest.sql  insert.sql  search.sql  update.sql
sql/creators/: get_all.sql  get_all_authors.sql  get_by_username.sql  insert.sql  update.sql
sql/images/: get_all.sql  get_by_any_of_tags.sql  get_by_id.sql  get_by_tag.sql  insert.sql  search.sql
sql/pages/: get_all.sql  get_by_path.sql  insert.sql  update.sql
src/: anyresponder.rs  data_dir.rs  defaults.rs  error.rs  flash_msg.rs  main.rs  token.rs
src/api/: default_response.rs  mod.rs
src/api/auth/: forms.rs  mod.rs  requests.rs
src/api/creator/: forms.rs  mod.rs  requests.rs
src/api/image/: forms.rs  mod.rs
src/api/page/: forms.rs  mod.rs
src/api/site_settings/: forms.rs  mod.rs  requests.rs
src/api/text/: forms.rs  mod.rs  requests.rs
src/app/: control_panel.rs  mod.rs  texts.rs
src/app/control_panel/: form_structs.rs  mod.rs
src/block_editor/: mod.rs
src/database/: mod.rs
src/database/models/: article.rs  creator.rs  image.rs  mod.rs  page.rs
static/: site.webmanifest
static/fonts/: Notes.txt
static/fonts/GentiumPlus/: prune-fonts.sh
static/fonts/GentiumPlus/Original/: OFL.txt
static/scripts/: control-panel-v2.js  control-panel.js  dialog.js  editor.js
templates/: about.html.tera  atom.xml.tera  control_panel.html.tera  control_panel_v2.html.tera  editor-v2.html.tera  editor.html.tera  landing.html.tera  login.html.tera  search.html.tera  single-page-view.html.tera  single-text-view.html.tera  text-by-id.html.tera  text.html.tera
templates/components/: editor.html.tera
templates/control_panel/: account_manager.html.tera  editor.html.tera  editor_v2.html.tera  image_gallery.html.tera  login.html.tera  main.html.tera  page_editor.html.tera  page_manager.html.tera  preview_done_unpublished.html.tera
templates/errors/: 404.html.tera  generic.html.tera
templates/templates/: app.html.tera
