[package]
name = "news-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
serde = "1"
slug = "0.1.5"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros" ] }
tokio-test = "0.4.2"
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}

[profile.release]
debug = false
codegen-units = 1
lto = true

[build]
rustflags = ["-C", "target-cpu=native"]

