[package]
name = "news-site"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
comrak = { version = "0", default-features = false, features = ["bon", "cli"] }
dotenvy = "0.15"
identicon-rs = "6"
image = "0.25"
jsonwebtoken = "9.3"
regex = "1"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
rust-i18n = "3"
serde = "1"
serde_json = "1"
slug = "0.1"
sqlx = { version = "0.8", features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = "1.45"
tokio-test = "0.4"
uuid = { version = "1.10", features = [
    "fast-rng",
    "macro-diagnostics",
    "serde",
    "v4",
] }
webp = "0.3"

[features]
fail-on-warnings = []

[profile.release]
debug = false
lto = true
codegen-units = 1

# From: https://github.com/launchbadge/sqlx?tab=readme-ov-file#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3
